# GyanForge

./: .env  .env.example  DEPLOYMENT-CHECKLIST.md  DOCKER-DEPLOY.md  Dockerfile  Dockerfile.minimal  Dockerfile.simple  Dockerfile.ultra  README.md  RENDER-DEPLOYMENT.md  SECURITY.md  deploy-free.sh  deploy-production.sh  docker-compose.yml  project-desc.md  railway.toml  render.yaml  requirements-docker.txt  setup-dev.sh  start-render.sh  vercel.json
backend/: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  requirements-core.txt  requirements.txt
backend/app/: main.py  schemas.py
backend/app/api/: deps.py
backend/app/api/v1/: assignments.py  auth.py  enhanced_chat.py  enhanced_modules.py  health.py  learning_paths.py  modules.py  quizzes.py  users.py
backend/app/core/: config.py  security.py
backend/app/db/: session.py
backend/app/models/: models.py
backend/app/schemas/: __init__.py  schemas.py
backend/app/services/: content_service.py  enhanced_chat_service.py  enhanced_content_service.py  learning_path_service.py  learning_path_service_simple.py  quiz_service.py  redis_service.py  simple_chat_service.py  youtube_service.py
backend/app/utils/: latex_utils.py  pdf_generator.py
frontend/: .env.production  .gitignore  Dockerfile  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.css  App.js  index.css
frontend/src/components/: ChatBox.js  Dashboard.js  EnhancedChatBox.css  EnhancedChatBox.js  EnhancedModules.css  EnhancedModules.js  EnhancedModules2.js  ErrorBoundary.js  LandingPage.js  LearningPage.js  Sidebar.js  (+11 more)
(+4 files in other folders)
