[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.16.5",
    "fastapi>=0.116.1",
    "google-generativeai>=0.8.5",
    "jwt>=1.4.0",
    "langchain>=0.3.27",
    "langchain-google-genai>=2.0.10",
    "langchain-openai>=0.3.30",
    "openai>=1.100.1",
    "passlib[bcrypt]>=1.7.4",
    "pinecone-client>=6.0.0",
    "psutil>=7.0.0",
    "psycopg2-binary>=2.9.10",
    "pydantic[email]>=2.11.7",
    "pyjwt>=2.10.1",
    "python-docx>=1.2.0",
    "python-dotenv>=1.1.1",
    "python-jose>=3.5.0",
    "python-multipart>=0.0.20",
    "redis>=6.4.0",
    "reportlab>=4.0.4",
    "sqlmodel>=0.0.24",
    "tavily-python>=0.7.11",
    "uvicorn>=0.35.0",
    "youtube-search-python>=1.6.6",
    "youtube-transcript-api>=1.2.2",
]
